--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "tailwind:init": "tailwindcss init -p"
   },
   "dependencies": {
+    "@blackbox-vision/react-qr-reader": "^5.0.0",
     "@supabase/supabase-js": "^2.74.0",
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "qrcode.react": "^4.2.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-qr-code": "^2.0.18",
     "react-qr-reader": "^3.0.0-beta-1",
     "uuid": "^13.0.0"
   },
