--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@blackbox-vision/react-qr-reader": "^5.0.0",
     "@supabase/supabase-js": "^2.74.0",
     "framer-motion": "^12.23.22",
+    "jsqr": "^1.4.0",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "qrcode.react": "^4.2.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.3.1",
+    "react-camera-pro": "^1.4.0",
+    "react-dom": "^18.3.1",
     "react-qr-code": "^2.0.18",
     "react-qr-reader": "^3.0.0-beta-1",
     "uuid": "^13.0.0"
