--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsqr": "^1.4.0",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
+    "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-camera-pro": "^1.4.0",
@@ -26,6 +27,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
